Update gradle buildfile, fix build warning, release 0.0.18